# PRY1-DPL

./: .gitignore  README.md  programa_afd.py  yalex.py
backend/: pyproject.toml
backend/src/generador_lexico/: __init__.py
backend/src/generador_lexico/api/: __init__.py  app.py  schemas.py
backend/src/generador_lexico/application/: __init__.py  catalog.py  use_cases.py
backend/src/generador_lexico/cli/: __init__.py  serve.py
backend/src/generador_lexico/core/: __init__.py  analizador-Diego.py  analizador.py  arbol-Diego.py  construccion_afd-Diego.py  simulador.py
backend/src/generador_lexico/presentation/: console.py  tabla.py
backend/src/generador_lexico/yalex/: __init__.py  codegen.py  compiler.py  parser.py  regex.py  runtime.py
backend/src/laboratorio/: arbol.py  tabla.py  yalex_codegen.py  yalex_compiler.py  yalex_runtime.py
backend/src/laboratorio/api/: __init__.py  app.py
backend/src/laboratorio/application/: __init__.py  positions.py  serialization.py  use_cases.py
backend/src/laboratorio/cli/: generate.py  serve.py
backend/src/laboratorio/presentation/: __init__.py  console.py
backend/tests/: conftest.py
backend/tests/contract/: test_api_contracts.py
backend/tests/legacy_tests/: conftest.py  test_analizador.py  test_arbol_y_afd.py  test_integracion.py  test_minimizacion.py  test_rubrica_proyecto01.py  test_yalex_codegen.py  test_yalex_parser.py  test_yalex_runtime.py  test_yalex_spec_completo.py
backend/tests/unit/: test_fixture_catalog.py  test_fixture_catalog_integration.py  test_positions.py  test_serialization.py
(+84 files in other folders)
