[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proyecto01-generador-lexers-backend"
version = "0.1.0"
description = "Backend Python para el generador de analizadores lexicos del Proyecto 01."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135,<1",
    "uvicorn>=0.42,<1",
]

[project.scripts]
laboratorio-api = "laboratorio.cli.serve:main"

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
